# locus

./: .gitignore  LICENSE  cabal.sandbox.config  hsrs.cabal  locus.cabal
db/: up
db/migrate/: run-migs  v001__cards.sql
src/: Card.hs  Main.hs  SnapUtil.hs
