name:                locus
version:             0.1.0.0
synopsis:            Spaced Repetition Flash Cards Software
-- description:
license:             MIT
license-file:        LICENSE
author:              Jack Coughlin
maintainer:          johnbcoughlin@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable locus
  main-is:            Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base,
                       bytestring,
                       snap-core,
                       snap-server,
                       postgresql-simple
  hs-source-dirs:      src
  default-language:    Haskell2010
